--- a/library-management-system/library-management-system/src/main/resources/templates/index.html
+++ b/library-management-system/library-management-system/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en-us">
+<html xmlns:th="http://www.thymeleaf.org" lang="en-us"
+        xmlns:sec="http://www.thymeleaf.org/extras/springsecurity5">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -11,6 +12,8 @@
 
 <body>
 <div class="container my-2">
+    Hello <b sec:authentication="principal.username">[No Username]</b>
+    <a href="/logout" style="float:right">Logout</a>
     <div class="card">
         <div class="card-body">
             <div th:switch="${books}" class="container my-5">
@@ -18,7 +21,7 @@
 <!--                    <i class="fas fa-solid fa-plus"> Add Book</i>-->
 <!--                </a>-->
                 <p class="my-5">
-                    <a th:href="@{/edit}" class="btn btn-success">
+                    <a th:href="@{/edit}" class="btn btn-success" sec:authorize="hasAnyRole('ADMIN', 'PUBLISHER')">
                         <i class="fas fa-solid fa-plus"> Add Book</i>
                     </a>
                 </p>
@@ -41,12 +44,12 @@
                             <td th:text="${book.description}"></td>
                             <td th:text="${book.price}"></td>
                             <td>
-                                <a th:href="@{/edit/{id}(id=${book.id})}" class="btn btn-warning">
+                                <a th:href="@{/edit/{id}(id=${book.id})}" class="btn btn-warning" sec:authorize="hasAnyRole('ADMIN', 'PUBLISHER')">
                                     <i class="fas fa-solid fa-edit"></i>
                                 </a>
                             </td>
                             <td>
-                                <a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-danger">
+                                <a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-danger" sec:authorize="hasAnyRole('ADMIN')">
                                     <i class="fas fa-solid fa-trash"></i>
                                 </a>
                             </td>
